# Nyx-Local

./: .gitignore  CHANGELOG_CAPABILITY_05.md  CHANGELOG_SPRINT_25.md  CHANGELOG_SPRINT_26.md  DEVELOPMENT_RULES.md  README.md  SPRINT_REPORT.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.ai/: 00_INDEX.md  ADR.md  AI_ONBOARDING.md  ARCHITECTURE.md  ARCHITECTURE_GUIDE.md  CODE_STYLE.md  CODING_STYLE.md  DEVELOPMENT_RULES.md  DO_NOT.md  PROJECT.md  REVIEW_CHECKLIST.md  ROADMAP.md  SKILLS.md  SPRINT_BLUEPRINT.md  STACK.md  TEAM.md  TESTING.md  WORKFLOW.md
.github/workflows/: ci.yml
docs/: SKILL_DEVELOPMENT_GUIDE.md
docs/architecture/: COMPUTER_APPLICATION_OPEN.md  COMPUTER_PROCESS_LIST.md  INTELLIGENCE_ARCHITECTURE.md  LOCAL_COMMUNICATION_CLIENT.md  PIPELINE_LIFECYCLE.md  SKILLS_ARCHITECTURE.md
scripts/: integration_gateway_client.py  package_project.py  prepare_pr.py  verify_nyx_os_integration.py
src/nyx_local/: __init__.py  gateway_main.py  main.py
src/nyx_local/application/: __init__.py  application.py
src/nyx_local/core/: __init__.py  app.py  bootstrap.py  models.py  registry.py  settings.py
src/nyx_local/domain/: __init__.py  applications.py  gateway.py  (+3 more)
tests/: __init__.py  test_application.py  test_bootstrap.py  test_console_interface.py  test_gateway_protocol.py  test_gateway_service.py  test_gateway_settings.py  test_intelligence_pipeline.py  test_memory.py  test_models.py  test_prepare_pr.py  test_registry.py  test_settings.py  test_skills.py  test_websocket_gateway.py
tests/integration/: nyx_os_gateway.integration.ts
(+50 files in other folders)
